<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/last_graphic_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/last_graphic"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/last_graphic"
        android:layout_width="match_parent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_height="300px"
        android:layout_marginTop="12dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/last_graphic_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_graphic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/colorPrimary"
        android:onClick="addGraphicClick"
        android:text="@string/add_graphic"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history_graphic_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@color/colorPrimary"
        android:onClick="viewHistoryClick"
        android:text="@string/history_graphic"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/add_graphic_button" />

</androidx.constraintlayout.widget.ConstraintLayout>