<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGraphicActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_graphic_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/add_graphic"
        app:titleTextColor="@android:color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_graphic_button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:onClick="addFunction"
        android:text="@string/add_function_word"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_graphic_toolbar" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:onClick="saveGraphic"
        android:text="@string/save_word"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_graphic_toolbar" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_graphic_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/add_graphic_button_add">

        <EditText
            android:id="@+id/add_graphic_function_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/function_example"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/add_graphic_function_width"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/add_graphic_function_width"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:hint="10"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:layout_constraintRight_toLeftOf="@id/add_graphic_color_pick"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_graphic_color_pick"
            android:layout_width="50dp"
            android:onClick="pickColor"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/add_graphic_functions_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/function_item"
        app:layout_constraintBottom_toTopOf="@id/add_graphic_view"
        app:layout_constraintTop_toBottomOf="@id/add_graphic_input_layout">

    </androidx.recyclerview.widget.RecyclerView>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/add_graphic_view"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>